--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
+.container {
+	border: 2px var(--dark-color-a);
+	background-color: var(--light-color);
+	border-radius: 5px;
+	padding: 10px;
+	margin: 10px 0;
+  }
+  
+  .darker {
+	border-color: #ccc;
+	background-color: #ddd;
+  }
+  
+  .container::after {
+	content: "";
+	clear: both;
+	display: table;
+  }
+  
+  .container img {
+	float: left;
+	min-width: 60px;
+	min-height: 60px;
+	max-width: 60px;
+	max-height: 60px;
+	width: 100%;
+	margin-right: 20px;
+	border-radius: 50%;
+	object-fit: fill;
+  }
+  
+  .container img.right {
+	float: right;
+	margin-left: 20px;
+	margin-right:0;
+  }
+  
+  .time-right {
+	float: right;
+	color: #aaa;
+  }
+  
+  .time-left {
+	float: left;
+	color: #999;
+  }
+
 .right {
 	position: absolute;
 	right: 10px;
@@ -21,6 +68,7 @@
 
 .img {
 	max-width: 20px;
+	object-fit: none;
 }
 
 input[type="file"] {
