--- a/public/chat.ejs
+++ b/public/chat.ejs
@@ -20,7 +20,7 @@
     <div class="chat-container">
       <header class="chat-header">
 
-        <h1><i class="fas fa-smile"></i> ChatCord</h1>
+        <h1 id="theme"><i class="fas fa-smile"></i> ChatCord</h1>
 
         <div class="form-control">
           <label for="room">Room: </label>
@@ -79,9 +79,40 @@
     const userList = document.getElementById("users")
     const roomForm = document.getElementById("room")
     const file = document.getElementById("file")
+    const theme = document.getElementById("theme")
 
     const username = "<%- username %>"
     const room = "<%- room %>"
+
+    
+
+    theme.addEventListener("click", e => {
+      let style = localStorage.getItem("theme") || "light"
+      
+      e.preventDefault()
+      console.log("clicked")
+      if (style == "dark") {
+        document.documentElement.style.setProperty('--dark-color-a', '#667aff');
+        document.documentElement.style.setProperty('--dark-color-b', '#7386ff');
+        document.documentElement.style.setProperty('--light-color', '#e6e9ff');
+        document.documentElement.style.setProperty('--success-color', '#5cb85c');
+        document.documentElement.style.setProperty('--error-color', '#d9534f');
+        document.documentElement.style.setProperty('--text-color', "black");
+        document.documentElement.style.setProperty('--background-color', "white");
+
+        localStorage.setItem("theme", "light")
+      } else {
+        document.documentElement.style.setProperty('--dark-color-a', '#121314');
+        document.documentElement.style.setProperty('--dark-color-b', '#222227');
+        document.documentElement.style.setProperty('--light-color', '#505053');
+        document.documentElement.style.setProperty('--success-color', '#5cb85c');
+        document.documentElement.style.setProperty('--error-color', '#d9534f');
+        document.documentElement.style.setProperty('--text-color', "white");
+        document.documentElement.style.setProperty('--background-color', "rgb(61, 61, 61)");
+
+        localStorage.setItem("theme", "dark")
+      }
+    })
 
     roomForm.value = "<%- room %>"
 
