--- a/public/index.ejs
+++ b/public/index.ejs
@@ -12,7 +12,7 @@
 		<% } %>
 			<div class="join-container">
 				<header class="join-header">
-					<h1><i class="fas fa-smile"></i> ChatCord</h1>
+					<h1 id="theme"><i class="fas fa-smile"></i> ChatCord</h1>
 				</header>
 				<main class="join-main">
 					<form method="POST">
@@ -30,4 +30,33 @@
 				</main>
 			</div>
 </body>
+<script>
+	const theme = document.getElementById("theme")
+    theme.addEventListener("click", e => {
+      e.preventDefault()
+	  let style = localStorage.getItem("theme") || "light"
+      if (style == "dark") {
+        document.documentElement.style.setProperty('--dark-color-a', '#667aff');
+        document.documentElement.style.setProperty('--dark-color-b', '#7386ff');
+        document.documentElement.style.setProperty('--light-color', '#e6e9ff');
+        document.documentElement.style.setProperty('--success-color', '#5cb85c');
+        document.documentElement.style.setProperty('--error-color', '#d9534f');
+        document.documentElement.style.setProperty('--text-color', "black");
+        document.documentElement.style.setProperty('--background-color', "white");
+
+        localStorage.setItem("theme", "light")
+      } else {
+        document.documentElement.style.setProperty('--dark-color-a', '#121314');
+        document.documentElement.style.setProperty('--dark-color-b', '#222227');
+        document.documentElement.style.setProperty('--light-color', '#505053');
+        document.documentElement.style.setProperty('--success-color', '#5cb85c');
+        document.documentElement.style.setProperty('--error-color', '#d9534f');
+        document.documentElement.style.setProperty('--text-color', "white");
+        document.documentElement.style.setProperty('--background-color', "rgb(61, 61, 61)");
+
+        localStorage.setItem("theme", "dark")
+      }
+    })
+
+</script>
 </html>
